[gd_scene load_steps=18 format=3 uid="uid://c7jc5d3435f62"]

[ext_resource type="Script" path="res://Scripts/player_script.gd" id="1_ks4i5"]
[ext_resource type="Script" path="res://Scripts/player_movement_script.gd" id="1_n1sol"]
[ext_resource type="Texture2D" uid="uid://bfyi25eoon1vm" path="res://Assets/Player/Player_Idle_0001.png" id="2_0pnak"]
[ext_resource type="Texture2D" uid="uid://ntimmn5ro7ws" path="res://Assets/Player/Player_Idle_0002.png" id="3_4x2qd"]
[ext_resource type="Texture2D" uid="uid://bo5tue01p77w5" path="res://Assets/Player/Player_Left_Damaged.png" id="3_dyxek"]
[ext_resource type="Texture2D" uid="uid://b1jpu8cyvomqm" path="res://Assets/Player/Player_Jump.png" id="4_qcb23"]
[ext_resource type="Texture2D" uid="uid://s4itsqvl4brb" path="res://Assets/Player/Player_Jump_Left.png" id="4_r3sxw"]
[ext_resource type="Texture2D" uid="uid://da0nbe2us5dio" path="res://Assets/Player/Player_Right_Damaged.png" id="4_t4ws3"]
[ext_resource type="Texture2D" uid="uid://bi6y8bubqmip1" path="res://Assets/Player/Player_Run_Left_001.png" id="6_yjnnr"]
[ext_resource type="Texture2D" uid="uid://c75em72vhepqo" path="res://Assets/Player/Player_Run_Left_002.png" id="7_mpcqh"]
[ext_resource type="Texture2D" uid="uid://cqty810lxqyhe" path="res://Assets/Player/Player_Run_Right_001.png" id="8_f41aa"]
[ext_resource type="Texture2D" uid="uid://dii1u7asg3kca" path="res://Assets/Player/Player_Run_Right_02.png" id="9_wev14"]
[ext_resource type="AudioStream" uid="uid://dqd0a8hgoxjpf" path="res://Assets/SFX/jumping_sfx_new.wav" id="13_dv5hb"]
[ext_resource type="AudioStream" uid="uid://d0i5wl2rft44t" path="res://Assets/SFX/walking_sfx.wav" id="14_cc0xa"]
[ext_resource type="AudioStream" uid="uid://chfe0axr0cbns" path="res://Assets/SFX/damage_sfx.wav" id="15_jdm2l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bf4xj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dyxek")
}],
"loop": true,
"name": &"damage_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_t4ws3")
}],
"loop": true,
"name": &"damage_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0pnak")
}, {
"duration": 1.0,
"texture": ExtResource("3_4x2qd")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_r3sxw")
}],
"loop": true,
"name": &"jump_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qcb23")
}],
"loop": true,
"name": &"jump_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yjnnr")
}, {
"duration": 1.0,
"texture": ExtResource("7_mpcqh")
}],
"loop": true,
"name": &"run_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_f41aa")
}, {
"duration": 1.0,
"texture": ExtResource("9_wev14")
}],
"loop": true,
"name": &"run_right",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_njpjq"]
radius = 4.8

[node name="Player" type="Node2D" groups=["player"]]
scale = Vector2(5, 5)
script = ExtResource("1_ks4i5")

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["player"]]
script = ExtResource("1_n1sol")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D" groups=["player"]]
sprite_frames = SubResource("SpriteFrames_bf4xj")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D" groups=["player"]]
z_index = 1
position = Vector2(5.96046e-08, 3.2)
shape = SubResource("CircleShape2D_njpjq")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D" groups=["player"]]
zoom = Vector2(1.77, 1.77)
limit_left = 0
limit_right = 1280
limit_bottom = 720
limit_smoothed = true
editor_draw_screen = false
editor_draw_limits = true

[node name="JumpingSFX" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
stream = ExtResource("13_dv5hb")
volume_db = -10.0

[node name="WalkingSFX" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
stream = ExtResource("14_cc0xa")
volume_db = -6.0

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
stream = ExtResource("15_jdm2l")

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="frame_changed" from="CharacterBody2D/AnimatedSprite2D" to="CharacterBody2D" method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="Damage_Timer" to="." method="_on_damage_timer_timeout"]
